2007-10-26  Juanma Barranquero  <lekktu@gmail.com>

	* minibuf.c (Fread_minibuffer, Feval_minibuffer): Reflow docstrings.

	* alloc.c (spare_memory, stack_copy, stack_copy_size, ignore_warnings)
	(Vdead, dont_register_blocks, staticvec, staticidx, interval_block)
	(n_interval_blocks, init_strings, check_string_bytes, check_sblock)
	(init_float, free_float, n_cons_blocks, init_cons, all_vectors)
	(n_vectors, symbol_block, symbol_block_index, symbol_free_list)
	(n_symbol_blocks, init_symbol, marker_block, marker_free_list)
	(n_marker_blocks, init_marker, valid_pointer_p, make_pure_float)
	(last_marked, mark_object_loop_halt): Make static.

	* frame.c (syms_of_frame) <delete-frame-functions>:
	Fix typo in docstring.

2007-10-25  Juanma Barranquero  <lekktu@gmail.com>

	* w32.c (init_environment): Fix tiny memory leak.
	(w32_get_resource): Remove unused variable `ok'.

2007-10-25  Stefan Monnier  <monnier@iro.umontreal.ca>

	Make `window-system' into a keyboard-local variable (rather than
	frame-local as done originally by multi-tty).

	* keyboard.h (struct kboard): Add Vwindow_system.
	* keyboard.c (init_kboard): Set a default for Vwindow_system.
	(mark_kboards): Mark Vwindow_system.

	* dispnew.c (syms_of_display) <window-system>: Declare terminal-local.
	(init_display): Don't set the obsolete `window-system' frame-param.

	* xterm.c (x_term_init):
	* w32term.c (w32_create_terminal):
	* term.c (init_tty): Set Vwindow_system.
	* macterm.c (mac_create_terminal): Set a keyboard (missing piece of the
	multi-tty merge maybe?), copied from w32term.c.  Set Vwindow_system.

	* xfns.c (Fx_create_frame, x_create_tip_frame):
	* w32fns.c (Fx_create_frame, x_create_tip_frame):
	* macfns.c (Fx_create_frame):
	Don't set the obsolete `window-system' frame-param.

	* frame.h (Qwindow_system): Remove.
	* frame.c (Qwindow_system): Remove.  In `syms_of_frame' as well.
	(Fmake_terminal_frame): Don't set obsolete `window-system' frame-param.
